--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
             Laboratorio 2
         </title>
 
-        <style></style>
-        <script></script>
+        <style src="style.css" href="stylesheet"></style>
+        <script src="script.js"></script>
     </head>
     <body>
+        <h1>Consulta por ID</h1>
+        <label for="findID"> Id a consultar: </label>
+        <input type="number" id="findID" placeholder="ID a consultar">
+        <button id="consulta">Consultar</button>
 
+        <div id="resultado"></div>
     </body>
 </html>
