--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Laboratorio 2
-        </title>
+<head>
+    <title>Laboratorio 2</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Consulta por ID</h1>
+    <label for="findID">Id a consultar:</label>
+    <input type="number" id="findID" placeholder="ID a consultar">
+    <button id="consulta">Consultar</button>
 
-        <style src="style.css" href="stylesheet"></style>
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <h1>Consulta por ID</h1>
-        <label for="findID"> Id a consultar: </label>
-        <input type="number" id="findID" placeholder="ID a consultar">
-        <button id="consulta">Consultar</button>
+    <div id="resultado"></div>
 
-        <div id="resultado"></div>
-    </body>
+    <script type="text/javascript" src="script.js"></script>
+</body>
 </html>
